--- a/app/views/invoices/_invoice.html.erb
+++ b/app/views/invoices/_invoice.html.erb
@@ -2,11 +2,12 @@
 <li class="row  shadow invoice-<%= invoice.id %>">
 
   <div class="col-sm-3">
-            <%= invoice.name %>
-        <%= invoice.endOfFortnight %>
-    <%= link_to 'Show', invoice %>
-    <%= link_to 'Edit', edit_invoice_path(invoice) %>
-    <%= link_to 'Destroy', invoice, method: :deletd, data: {conform: 'Are you sure'} %>
+            <%= invoice.id %>
+        <%= invoice.customer_fullname %>
+    </div><div class="col-sm-9">
+  <div class="pull-right">
+    <%= link_to 'Show', invoice, class: 'btn btn-primary' %>
+    </div>
     </div>
 
 
