--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -5,25 +5,37 @@
   <h2>Total hours for project <%= Work.total_hours_for_project(@project.id) %></h2>
 
   <%= form_tag project_path(@project), method: :get do %>
-      <div class="row padding_bottom">
-        <div class="col-xs-5">
-          <button formaction=" <%= project_path(@project, format: 'csv') %>" ,type="submit" , class="btn btn-default">Csv</button>
-          <button formaction=" <%= project_path(@project, format: 'xls') %>" ,type="submit" , class="btn btn-default">Excel</button>
-          <button formaction=" <%= project_path(@project, format: 'pdf') %>" ,type="submit" , class="btn btn-default">View Invoice</button>
-          <%= link_to 'Save Invoice', project_path(@project, save: 'true', start_date: params[:start_date], end_date: params[:end_date]), class: "btn btn-default" %>
+<div class="row">
+      <div class="btn-group">
+        <button formaction=" <%= project_path(@project, format: 'csv') %>" ,type="submit" , class="btn btn-default">Csv</button>
+        <button formaction=" <%= project_path(@project, format: 'xls') %>" ,type="submit" , class="btn btn-default">Excel</button>
+        <button formaction=" <%= project_path(@project, format: 'pdf') %>" ,type="submit" , class="btn btn-default">View
+          Invoice
+        </button>
+        <%= link_to 'Save Invoice', project_path(@project, save: 'true', start_date: params[:start_date], end_date: params[:end_date]), class: "btn btn-default " %>
 
-        </div>
-        <div class="col-xs-2">
-          <%= date_field_tag :start_date, params[:start_date], class: "form-control" %>
-        </div>
-        <div class="col-xs-2">
-          <%= date_field_tag :end_date, params[:end_date], class: "form-control" %>
-        </div>
-        <div class="col-xs-2">
-          <%= submit_tag "search", class: "btn btn-default form-control" %>
-        </div>
       </div>
+</div>
+      <br>
+      <div class="row">
+<div class="col-sm-4">
+          <%= label_tag :start_date %>
+          <%= date_field_tag :start_date, params[:start_date], class: "form-control" %>
 
+
+          <%= label_tag :end_date %>
+          <%= date_field_tag :end_date, params[:end_date], class: "form-control " %>
+
+</div>
+  <div class="col-sm-2">
+    <br>
+    <br>
+    <br>
+    <br>
+          <%= submit_tag "search", class: "btn btn-default " %>
+  </div>
+
+</div>
       <br>
 
       <div id="">
