--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,61 +1,61 @@
 <div class="container">
   <div class="form-horizontal">
-  <%= form_for(@user, remote: true) do |f| %>
-      <% if @user.errors.any? %>
-          <div id="error_explanation">
-            <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2>
+    <%= form_for(@user, remote: true) do |f| %>
+        <% if @user.errors.any? %>
+            <div id="error_explanation">
+              <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2>
 
-            <ul>
-              <% @user.errors.full_messages.each do |message| %>
-                  <li><%= message %></li>
-              <% end %>
-            </ul>
-          </div>
-      <% end %>
-      <div class="form-group">
-        <div class="row">
-          <div class="col-sm-2">
-            <%= f.label :email, class: "control-label" %>
-          </div>
-          <div class=" col-sm-7">
-            <%= f.text_field :email, class: "form-control" %>
+              <ul>
+                <% @user.errors.full_messages.each do |message| %>
+                    <li><%= message %></li>
+                <% end %>
+              </ul>
+            </div>
+        <% end %>
+        <div class="form-group">
+          <div class="row">
+            <div class="col-sm-2">
+              <%= f.label :email, class: "control-label" %>
+            </div>
+            <div class=" col-sm-7">
+              <%= f.text_field :email, class: "form-control" %>
+            </div>
           </div>
         </div>
-      </div>
 
 
-      <div class="form-group">
-        <div class="row">
-          <div class="col-sm-2">
-            <%= f.label :username, class: "control-label" %>
-          </div>
-          <div class=" col-sm-7">
-            <%= f.text_field :username, class: "form-control" %>
+        <div class="form-group">
+          <div class="row">
+            <div class="col-sm-2">
+              <%= f.label :username, class: "control-label" %>
+            </div>
+            <div class=" col-sm-7">
+              <%= f.text_field :username, class: "form-control" %>
+            </div>
           </div>
         </div>
-      </div>
 
-      <div class="form-group">
-        <div class="row">
-          <div class="col-sm-2">
-            <%= f.label :first_name, class: "control-label" %>
-          </div>
-          <div class=" col-sm-7">
-            <%= f.text_field :first_name, class: "form-control" %>
+        <div class="form-group">
+          <div class="row">
+            <div class="col-sm-2">
+              <%= f.label :first_name, class: "control-label" %>
+            </div>
+            <div class=" col-sm-7">
+              <%= f.text_field :first_name, class: "form-control" %>
+            </div>
           </div>
         </div>
-      </div>
 
-      <div class="form-group">
-        <div class="row">
-          <div class="col-sm-2">
-            <%= f.label :last_name, class: "control-label" %>
-          </div>
-          <div class=" col-sm-7">
-            <%= f.text_field :last_name, class: "form-control" %>
+        <div class="form-group">
+          <div class="row">
+            <div class="col-sm-2">
+              <%= f.label :last_name, class: "control-label" %>
+            </div>
+            <div class=" col-sm-7">
+              <%= f.text_field :last_name, class: "form-control" %>
+            </div>
           </div>
         </div>
-      </div>
 
 
         <div class="form-group">
@@ -141,21 +141,41 @@
               <%= f.label :rate, class: "control-label" %>
             </div>
             <div class=" col-sm-7">
-              <%= f.text_field :rate, class: "form-control" %>
+              $ <%= @user.pay_rates.last.rate if @user.pay_rates.present? %> Per Hour
+
+
+              <div class="actions">
+                <div class='btn btn-default'>
+                  <% if @user.pay_rates.present? %>
+                      <%= link_to_add_fields "Change Pay Rate", f, :pay_rates %>
+                  <% else %>
+                      <%= link_to_add_fields "Add Pay Rate", f, :pay_rates %>
+                  <% end %>
+                </div>
+              </div>
+              <div class="table-responsive">
+                <table>
+                  <tr id="hours">
+                  </tr>
+
+
+                  </tr>
+                </table>
+              </div>
+            </div>
+          </div>
+
+
+          <div class="row">
+            <div class="form-group">
+              <div class="col-sm-offset-2 col-sm-7 ">
+
+                <%= f.submit class: "btn btn-default pull-right" %>
+
+              </div>
             </div>
           </div>
         </div>
-
-
-        <div class="row">
-          <div class="form-group">
-            <div class="col-sm-offset-2 col-sm-7 ">
-
-              <%= f.submit class: "btn btn-default pull-right" %>
-
-            </div>
-          </div>
-        </div>
-      </div>
-  <% end %>
+    <% end %>
+  </div>
 </div>
