--- a/app/views/projects/show.pdf.erb
+++ b/app/views/projects/show.pdf.erb
@@ -50,7 +50,7 @@
     <tr>
       <td colspan="2">
         <div id="">
-          <%= render 'shared/time_sheets_for_week.html.erb', :formats => [:html] %>
+          <%= render 'shared/time_sheets_for_week.html.erb', time: @time, :formats => [:html] %>
         </div>
 
     <tr>
