--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -28,37 +28,7 @@
     </tr>
     <tr>
       <td colspan="2  ">
-        <table class="table table-bordered table-striped" style="width: 100%">
-          <tr class="grey_backgound">
-            <th>Employee</th>
-            <th>Date worked</th>
-            <th>Hours</th>
-            <th>Rate</th>
-            <th>Sub Total</th>
-
-
-          </tr>
-          <% @invoice.invoice_rows.each_with_index do |time, i| %>
-              <tr>
-                <td><%= time.username %></td>
-                <td><%= time.date.strftime("%A %b %d ") %></td>
-                <td><%= time.hours %></td>
-                <td><%= time.rate %></td>
-                <td><%= @row_total[i] %></td>
-              </tr>
-
-          <% end %>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td>total <%= @total %> </td>
-
-          <tr>
-          </tr>
-          </td>
-          </tr>
-        </table>
+        <%= render 'invoice_table' %>
     <tr>
       <td>Please pay you invoice with in 2 week or men with guns will come to you house and take possession of you
         dog
