--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -9,10 +9,7 @@
       <div class="btn-group">
         <button formaction=" <%= project_path(@project, format: 'csv') %>" ,type="submit" , class="btn btn-default">Csv</button>
         <button formaction=" <%= project_path(@project, format: 'xls') %>" ,type="submit" , class="btn btn-default">Excel</button>
-        <button formaction=" <%= project_path(@project, format: 'pdf') %>" ,type="submit" , class="btn btn-default">View
-          Invoice
-        </button>
-        <%= link_to 'Save Invoice', project_path(@project, save: 'true', start_date: params[:start_date], end_date: params[:end_date]), class: "btn btn-default " %>
+        <button formaction=" <%= project_path(@project, format: 'pdf') %>" ,type="submit" , class="btn btn-default">Pdf</button>
 
       </div>
 </div>
@@ -39,7 +36,7 @@
       <br>
 
       <div id="">
-        <%= render 'shared/time_sheets_for_week' %>
+        <%= render 'shared/time_sheets_for_week', time: @time %>
       </div>
 
       <h1>Hours By Day</h1>
