--- a/app/views/projects/show.xls.erb
+++ b/app/views/projects/show.xls.erb
@@ -1,3 +1,3 @@
 <div id="">
-  <%= render 'shared/time_sheets_for_week.html.erb' %>
+  <%= render 'shared/time_sheets_for_week.html.erb, time: @time  %>
 </div>
