new style for list partials

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -148,3 +148,10 @@ li.background {
 .button:focus, .button.active, .button.active:focus {
   color: white !important;
 }
+a:link {
+  text-decoration: none;
+}
+hidden {
+  visibility:hidden
+}
+
