--- a/app/views/invoices/index.html.erb
+++ b/app/views/invoices/index.html.erb
@@ -1,16 +1,16 @@
 <p id="notice"><%= notice %></p>
 
 
-<div class='pull-right '  >
-  <button  id="new-project" class="btn btn-primary">New Invoice</button>
+<div class='pull-right '>
+  <button id="new-project" class="btn btn-primary">New Invoice</button>
 </div>
 <h1>Invoices</h1>
 
 <div>
   <NewProject id="NewProject" class="new-project">
     <%= link_to 'Save Invoice', invoice_path(@invoice, save: 'true', start_date: params[:start_date], end_date: params[:end_date]), class: "btn btn-default " %>
-<h1>Uninvoiced work for <%= @project.name.humanize %></h1>
-    <h4>Customer: <%= @invoice.customer_fullname.humanize %></h4>
+    <h1>Uninvoiced work for <%= @project.name.humanize %></h1>
+    <h4>Customer: <%= @invoice.customer_full_name.humanize %></h4>
     <div id="">
       <%= render 'shared/time_sheets_for_week', time: @time %>
     </div>
@@ -18,15 +18,15 @@
   </NewProject>
 
 </div>
-
 <%= will_paginate @invoices %>
+<div class="col-md-6"><strong>Invoice No#</strong></div>
+<div class="col-md-6"><strong>Customer: </strong></div>
+<br>
 <ul>
   <%= render @invoices %>
-
 </ul>
-
 <%= will_paginate @invoices %>
 
-
+<br>
 
 
