--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -15,12 +15,12 @@
     </tr>
     <tr>
       <td colspan="2">
-        <h2>to: <%= @invoice.customer_fullname %></h2>
+        <h2>to: <%= @invoice.customer_full_name %></h2>
         <p><%= @invoice.customer_address %> <br>
           ABN: <%= @invoice.customer_abn %></p>
 
         <p>
-        <h2><%= @invoice.owner_fullname %> </h2>
+        <h2><%= @invoice.owner_full_name %> </h2>
         <%= @invoice.owner_address %> <br>
         ABN: <%= @invoice.owner_abn %>
         </p>
