--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -18,19 +18,21 @@ pre {
   padding: 10px;
   font-size: 11px;
 }
-
-a {
-  color: #000;
-
-  &:visited {
-    color: #666;
-  }
-
-  &:hover {
-    color: #fff;
-    background-color: #000;
-  }
+a{
+  text-decoration: none;
 }
+//a {
+//  color: #000;
+//
+//  &:visited {
+//    color: #666;
+//  }
+//
+//  &:hover {
+//    color: #fff;
+//    background-color: #000;
+//  }
+//}
 
 th {
   padding-bottom: 5px;
