--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,21 +1,35 @@
+<div class="container">
 <p id="notice"><%= notice %></p>
-<div class='pull-right '  >
+
+<div class="row">
+<div class='pull-right'  >
   <button  id="new-project" class="btn btn-primary">New Project</button>
 </div>
 <h1>Projects</h1>
 
 <div>
 <NewProject id="NewProject" class="new-project">
+  <div id="">
   <%= render 'form' %>
+  </div>
 </NewProject>
 
 </div>
+</div>
 
 <%= will_paginate @projects %>
-<ul >
+<div class="row">
+<div class="col-md-6"><strong>Project Title</strong></div>
+<div class="col-md-6"><strong>Customer </strong></div>
+</div>
+<br>
+<ul>
+
 <%= render @projects %>
+
 </ul>
 <%= will_paginate @projects %>
 
 
 <br>
+</div>
