new style for side menu

--- a/app/views/invoices/_invoice.html.erb
+++ b/app/views/invoices/_invoice.html.erb
@@ -1,8 +1,9 @@
+
 <li class="row  shadow invoice-<%= invoice.id %>">
-  <div class="col-md-6">
+  <div class="col-4">
     <h5> <%= invoice.id %></h5>
   </div>
-  <div class="col-md-6">
+  <div class="col-4">
     <h5>
       <%= invoice.customer_full_name %>
     </h5>
