--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -1,8 +1,8 @@
 <li class="row  shadow project-<%= project.id %>">
-  <div class="col-md-6">
+  <div class="col-5">
     <h5> <%= project.name%></h5>
   </div>
-  <div class="col-md-6">
+  <div class="col-5">
     <h5>
       <%= project.customer.full_name %>
     </h5>
