--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -19,8 +19,8 @@
 
 <%= will_paginate @projects %>
 <div class="row">
-<div class="col-md-6"><strong>Project Title</strong></div>
-<div class="col-md-6"><strong>Customer </strong></div>
+<div class="col-5"><strong>Project Title</strong></div>
+<div class="col-5"><strong>Customer </strong></div>
 </div>
 <br>
 <ul>
