--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,10 +1,10 @@
-<li class="shadow user-<%= user.id %>">
-         <div class="col-sm-9">
+<li class="row shadow user-<%= user.id %>">
+         <div class="col-8">
          <strong>
            <%= user.full_name %>
          </strong>
 
        </div>
-        <%= link_to 'Open', user, class: "btn btn-primary" %>
+        <%= link_to 'Open', user, class: "hidden" %>
 </li>
 <br>
