--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,6 +19,11 @@
 body, html, .container-fluid, .sidebar, .body {
   height: 100%;
   min-height: 100%;
+
+}
+body{
+  padding-top: 50px;
+  margin-right: 20px;
 }
 
 footer {
@@ -50,108 +55,241 @@ th {
   outline: 2px solid #ccc;
 }
 
-.sidebar-background {
-  background-color: #f0f0f0;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  width: 50px;
+
+  .form-group {
+    margin: 0;
+    padding: 0;
+  }
+
+  li.shadow {
+    box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    padding: 19px;
+  }
+
+  li.darkShadow {
+    box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    background-color: grey;;
+  }
+
+  li.background {
+    //background-color: grey;
+    box-shadow: 0 4px 16px 0 rgba(0, 0, 0, 0.6), 6px 12px 30px 0 rgba(0, 0, 0, 0.19);
+    //font-size: 150%;
+
+  }
+  .btn-primary {
+    color: #fff;
+    background-color: #0495c9;
+    border-color: #357ebd; /*set the color you want here*/
+
+  }
+  .button:focus, .button.active, .button.active:focus {
+    color: white !important;
+  }
+  a:link {
+    text-decoration: none;
+  }
+  hidden {
+    visibility: hidden
+  }
+
+
+* {
+  box-sizing: border-box;
+}
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+[class*="col-"] {
+  float: left;
+  padding: 15px;
 }
 
-#sidebar-wrapper {
-  z-index: 1;
+.header {
+  background-color: #9933cc;
+  color: #ffffff;
+  padding: 15px;
+}
+.menu ul {
   position: fixed;
-  width: 250px;
-  height: 100%;
-  overflow-y: hidden;
-  background: lightgrey;
-  opacity: 0.9;
-  padding-top: 45px;
-
-}
-
-#page-content-wrapper {
-  width: 100%;
-  position: absolute;
-  padding-left: 260px;
-  padding-right: 10px;
-  padding-top: 45px;
-
-}
-
-#wrapper.menuDisplayed #sidebar-wrapper {
-  width: 0px;
-
-}
-
-#wrapper.menuDisplayed #page-content-wrapper {
-  padding-left: 10px;
-  padding-right: 10px;
-
-}
-
-.sidebar-nav {
+  list-style-type: none;
+  margin: 0;
   padding: 0;
-  list-style: none;
-
+}
+.menu li {
+  padding: 8px;
+  margin-bottom: 7px;
+  background-color: #33b5e5;
+  color: #ffffff;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+}
+.menu li:hover {
+  background-color: #0099cc;
 }
 
-.sidebar-nav li {
-  text-indent: 20px;
-  line-height: 40px;
-
+.menuhide {
+  visibility: visible;
 }
-
-.sidebar-nav li a {
-  display: block;
-  text-decoration: none;
-  color: gray;
-
+.aside {
+  background-color: #33b5e5;
+  padding: 15px;
+  color: #ffffff;
+  text-align: center;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
-
-.sidebar-nav li a:hover {
-  background: #16AO85;
-
+.footer {
+  background-color: #0099cc;
+  color: #ffffff;
+  text-align: center;
+  font-size: 12px;
+  padding: 15px;
 }
+/* For mobile phones: */
+[class*="col-"] {
+  width: 100%;
+  #menuhide {
+    display: none !important;
+  }
+}
+@media screen and (max-width: 760px) {
+  .menu-hide-mobile {
+    visibility: hidden;
+    clear: both;
+    float: left;
+    margin: 50px auto 5px 20px;
+    width: 90%;
+    //display: none;
+  }
+}
+  @media only screen and (min-width: 768px) {
+    .menu-hide-mobile {
+      visibility: visible;
+      clear: both;
+      float: left;
+      //margin: 10px auto 5px 20px;
+      width: 28%;
+      display: initial;
+    }
+    /* For desktop: */
+    .col-1 {
+      width: 8.33%;
+    }
+    .col-2 {
+      width: 16.66%;
+    }
+    .col-3 {
+      width: 25%;
+    }
+    .col-4 {
+      width: 33.33%;
+    }
+    .col-5 {
+      width: 41.66%;
+    }
+    .col-6 {
+      width: 50%;
+    }
+    .col-7 {
+      width: 58.33%;
+    }
+    .col-8 {
+      width: 66.66%;
+    }
+    .col-9 {
+      width: 75%;
+    }
+    .col-10 {
+      width: 83.33%;
+    }
+    .col-11 {
+      width: 91.66%;
+    }
+    .col-12 {
+      width: 100%;
+    }
+  }
 
-.navbar {
-  position: fixed;
-  min-height: 40px;
-  max-height: 50px;
-  margin-bottom: 0 !important;
-  border: 1px solid transparent;
-}
+  size {
+    width: 100%;
+  }
 
-li.shadow {
-  box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  padding: 19px !important;
-}
-
-li.darkShadow {
-  box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  background-color: grey;;
-}
-
-li.background {
-  //background-color: grey;
-  box-shadow: 0 4px 16px 0 rgba(0, 0, 0, 0.6), 6px 12px 30px 0 rgba(0, 0, 0, 0.19);
-  //font-size: 150%;
-
-}
-.btn-primary {
-  color: #fff;
-  background-color: #0495c9;
-  border-color: #357ebd; /*set the color you want here*/
-
-}
-.button:focus, .button.active, .button.active:focus {
-  color: white !important;
-}
-a:link {
-  text-decoration: none;
-}
-hidden {
-  visibility:hidden
-}
-
+//
+//.sidebar-background {
+//  background-color: #f0f0f0;
+//  position: absolute;
+//  top: 0;
+//  bottom: 0;
+//  left: 0;
+//  width: 50px;
+//}
+//
+//#sidebar-wrapper.col-2 {
+//  z-index: 1;
+//  position: fixed;
+//
+//  height: 100%;
+//  overflow-y: hidden;
+//  background: lightgrey;
+//  opacity: 0.9;
+//  padding-top: 45px;
+//
+//}
+//
+//#page-content-wrapper.col-4 {
+//
+//  position: absolute;
+//
+//  padding-right: 10px;
+//  padding-top: 45px;
+//
+//}
+//
+//#wrapper.menuDisplayed #sidebar-wrapper {
+//  display: none;
+//
+//}
+//
+//#menu.menuDisplayed #page-content-wrapper {
+//  display: none;
+//
+//}
+//
+//.sidebar-nav.col-2 {
+//  padding: 0;
+//  list-style: none;
+//
+//}
+//
+//.sidebar-nav li {
+//  text-indent: 20px;
+//  line-height: 40px;
+//  &:hover {
+//    color: white !important;
+//    background-color: gray;
+//
+//  }
+//}
+//
+//.sidebar-nav li a {
+//  display: block;
+//  text-decoration: none;
+//  color: gray;
+//  &:hover {
+//    color: white;
+//  }
+//}
+//
+//.sidebar-nav li a:hover {
+//  background: #16AO85;
+//
+//}
+//
+//.navbar.col-2 {
+//  position: fixed;
+//  min-height: 40px;
+//  max-height: 50px;
+//  margin-bottom: 0 !important;
+//  border: 1px solid transparent;
+//}
