--- a/app/views/customers/_customer.html.erb
+++ b/app/views/customers/_customer.html.erb
@@ -1,10 +1,10 @@
-<li class="shadow user-<%= customer.id %>">
+<li class=" row shadow user-<%= customer.id %>">
   <div class="col-sm-9">
     <strong>
       <%= customer.full_name %>
     </strong>
 
   </div>
-  <%= link_to 'Open', customer, class: "btn btn-primary" %>
+  <%= link_to 'Open', customer, class: "hidden" %>
 </li>
 <br>
