--- a/app/views/invoices/index.html.erb
+++ b/app/views/invoices/index.html.erb
@@ -19,8 +19,9 @@
 
 </div>
 <%= will_paginate @invoices %>
-<div class="col-md-6"><strong>Invoice No#</strong></div>
-<div class="col-md-6"><strong>Customer: </strong></div>
+<div class="col-4"><strong>Invoice No#</strong></div>
+<div class="col-4"><strong>Customer: </strong></div>
+<br>
 <br>
 <ul>
   <%= render @invoices %>
