--- a/app/views/time_sheets/_works.html.erb
+++ b/app/views/time_sheets/_works.html.erb
@@ -10,7 +10,7 @@
 
       <td>
         <div class="field">
-          <%= f.number_field :hour,min: 0,class: 'form-control' %>
+          <%= f.number_field :hour,min: 0,class: 'form-control', step: :any %>
         </div>
       </td>
 
