--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -14,10 +14,10 @@
         <% end %>
         <div class="form-group">
           <div class="row">
-            <div class="col-sm-2">
+            <div class="col-2">
               <%= f.label :email, class: "control-label" %>
             </div>
-            <div class=" col-sm-7">
+            <div class=" col-7">
               <%= f.text_field :email, class: "form-control" %>
             </div>
           </div>
@@ -26,10 +26,10 @@
 
         <div class="form-group">
           <div class="row">
-            <div class="col-sm-2">
+            <div class="col-2">
               <%= f.label :username, class: "control-label" %>
             </div>
-            <div class=" col-sm-7">
+            <div class=" col-7">
               <%= f.text_field :username, class: "form-control" %>
             </div>
           </div>
@@ -37,10 +37,10 @@
 
         <div class="form-group">
           <div class="row">
-            <div class="col-sm-2">
+            <div class="col-2">
               <%= f.label :first_name, class: "control-label" %>
             </div>
-            <div class=" col-sm-7">
+            <div class=" col-7">
               <%= f.text_field :first_name, class: "form-control" %>
             </div>
           </div>
@@ -48,10 +48,10 @@
 
         <div class="form-group">
           <div class="row">
-            <div class="col-sm-2">
+            <div class="col-2">
               <%= f.label :last_name, class: "control-label" %>
             </div>
-            <div class=" col-sm-7">
+            <div class=" col-7">
               <%= f.text_field :last_name, class: "form-control" %>
             </div>
           </div>
@@ -60,10 +60,10 @@
 
         <div class="form-group">
           <div class="row">
-            <div class="col-sm-2">
+            <div class="col-2">
               <%= f.label :street_no, class: "control-label" %>
             </div>
-            <div class=" col-sm-7">
+            <div class=" col-7">
               <%= f.text_field :street_no, class: "form-control" %>
             </div>
           </div>
@@ -71,10 +71,10 @@
 
         <div class="form-group">
           <div class="row">
-            <div class="col-sm-2">
+            <div class="col-2">
               <%= f.label :street, class: "control-label" %>
             </div>
-            <div class=" col-sm-7">
+            <div class=" col-7">
               <%= f.text_field :street, class: "form-control" %>
             </div>
           </div>
@@ -82,10 +82,10 @@
 
         <div class="form-group">
           <div class="row">
-            <div class="col-sm-2">
+            <div class="col-2">
               <%= f.label :city, class: "control-label" %>
             </div>
-            <div class=" col-sm-7">
+            <div class=" col-7">
               <%= f.text_field :city, class: "form-control" %>
             </div>
           </div>
@@ -93,10 +93,10 @@
 
         <div class="form-group">
           <div class="row">
-            <div class="col-sm-2">
+            <div class="col-2">
               <%= f.label :state, class: "control-label" %>
             </div>
-            <div class=" col-sm-7">
+            <div class=" col-7">
               <%= f.text_field :state, class: "form-control" %>
             </div>
           </div>
@@ -104,10 +104,10 @@
 
         <div class="form-group">
           <div class="row">
-            <div class="col-sm-2">
+            <div class="col-2">
               <%= f.label :country, class: "control-label" %>
             </div>
-            <div class=" col-sm-7">
+            <div class=" col-7">
               <%= f.text_field :country, class: "form-control" %>
             </div>
           </div>
@@ -115,10 +115,10 @@
 
         <div class="form-group">
           <div class="row">
-            <div class="col-sm-2">
+            <div class="col-2">
               <%= f.label :post_code, class: "control-label" %>
             </div>
-            <div class=" col-sm-7">
+            <div class=" col-7">
               <%= f.text_field :post_code, class: "form-control" %>
             </div>
           </div>
@@ -126,10 +126,10 @@
 
         <div class="form-group">
           <div class="row">
-            <div class="col-sm-2">
+            <div class="col-2">
               <%= f.label :abn, class: "control-label" %>
             </div>
-            <div class=" col-sm-7">
+            <div class=" col-7">
               <%= f.text_field :abn, class: "form-control" %>
             </div>
           </div>
@@ -137,10 +137,10 @@
 
         <div class="form-group">
           <div class="row">
-            <div class="col-sm-2">
+            <div class="col-2">
               <%= f.label :rate, class: "control-label" %>
             </div>
-            <div class=" col-sm-7">
+            <div class=" col-7">
               $ <%= @user.pay_rates.last.rate if @user.pay_rates.present? %> Per Hour
 
 
@@ -168,7 +168,7 @@
 
           <div class="row">
             <div class="form-group">
-              <div class="col-sm-offset-2 col-sm-7 ">
+              <div class="col-sm-offset-2 col-7 ">
 
                 <%= f.submit class: "btn btn-default pull-right" %>
 
