--- a/app/views/projects/_time_sheets_for_week.html.erb
+++ b/app/views/projects/_time_sheets_for_week.html.erb
@@ -12,8 +12,8 @@
         <tr>
         <span>
         <td><%= link_to "#{time.user.full_name}", time_sheet_path(time) %></td>
-        <td><%= time.time_period %></td>
-        <td><%= time.user.rate %></td>
+        <td><%= time.time_period.strftime("%A %b %d ") %></td>
+        <td><%= time.user.rate(time.time_period) %></td>
         <td>  <%= time.hour %> </td>
         <td>$<%= @total_for_user[i] %></td></span></tr>
     <% end %>
