--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,3 +1,4 @@
+
 <div class="container">
 <p id="notice"><%= notice %></p>
 
@@ -19,8 +20,8 @@
 
 <%= will_paginate @projects %>
 <div class="row">
-<div class="col-5"><strong>Project Title</strong></div>
-<div class="col-5"><strong>Customer </strong></div>
+<div class=" col-md-5 col-xs-5 "><strong>Project Title</strong></div>
+<div class="col-md-5 col-xs-5 "><strong>Customer </strong></div>
 </div>
 <br>
 <ul>
