--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,14 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
 
   <%= stylesheet_link_tag 'font-awesome.min', media: 'all' %>
+  <!-- Latest compiled and minified CSS -->
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 
+  <!-- Optional theme -->
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+
+  <!-- Latest compiled and minified JavaScript -->
+  <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
@@ -40,16 +47,13 @@
           <% else %>
               <%= link_to "Sign up", new_user_registration_path, :class => 'navbar-link' %> |
               <%= link_to "Login", new_user_session_path, :class => 'navbar-link' %>|
-
-
           <% end %>
           </div>
     </div>
   </nav>
 
-<div id="menuhides" class="menu-hide-mobile col-2" style="position: fixed;top:50px;height:50px;">
+<div id="menuhides" class="menu-hide-mobile col-md-2 col-xs-0 " style="position: fixed; z-index: 2;">
       <ul class="menu" >
-
           <li><%= link_to 'My Timesheets', time_sheets_path(current_user) %></li>
           <li><%= link_to 'My Invoices', invoices_path(current_user) %></li>
           <li><%= link_to 'My Projects', projects_path %></li>
@@ -58,28 +62,15 @@
         </ul>
       </div>
 
-    <div id="bodysize" class="container col-10 pull-right">
+    <div id="bodysize" class="container-fluid  col-md-10 col-sm-12 pull-right body-container" style="z-index: 1;">
       <%= yield %>
 
     </div>
-</body>   <!-- Copyright Start  -->
+</body>
+<!-- Copyright Start  -->
 
 <script>
-    $("#menu-toggle").click( function (e){
-        e.preventDefault();
-        var x = document.getElementById('menuhides');
-        var body = document.getElementById("bodysize");
-        if (x.style.visibility === 'hidden') {
-            x.style.visibility = 'visible';
-            body.classList.remove('col-12')
-            body.classList.add('col-10')
-        } else {
-            x.style.visibility = 'hidden';
-            body.classList.add('col-12');
-            body.classList.remove('col-10');
-        }
 
-    });
 </script>
 
 </html>
