--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -1,13 +1,16 @@
-<li class="row  shadow project-<%= project.id %>">
-  <div class="col-5">
-    <h5> <%= project.name%></h5>
+<li class=" shadow project-<%= project.id %>">
+<div class="row">
+  <div class="col-md-5 col-xs-5">
+    <h5> <%= project.name.humanize%></h5>
   </div>
-  <div class="col-5">
+  <div class="col-md-5 col-xs-5">
     <h5>
       <%= project.customer.full_name %>
     </h5>
     <%= link_to 'Show', project, class: "hidden" %>
   </div>
+</div>
+
 </li>
 <br>
 
