--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,4 +1,5 @@
-<li class="row shadow user-<%= user.id %>">
+<li class="shadow user-<%= user.id %>">
+  <div class="row">
          <div class="col-8">
          <strong>
            <%= user.full_name %>
@@ -6,5 +7,6 @@
 
        </div>
         <%= link_to 'Open', user, class: "hidden" %>
+  </div>
 </li>
 <br>
