--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -8,7 +8,7 @@
 <div class="row">
       <div class="btn-group">
         <button formaction=" <%= project_path(@project, format: 'csv') %>" ,type="submit" , class="btn btn-default">Csv</button>
-        <button formaction=" <%= project_path(@project, format: 'xls') %>" ,type="submit" , class="btn btn-default">Excel</button>
+        <button formaction=" <%= project_path(@project, format: 'xlsx') %>" ,type="submit" , class="btn btn-default">Excel</button>
 
 
       </div>
