--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -14,6 +14,8 @@
     <em>(<%= @minimum_password_length %> characters minimum)</em>
     <% end %><br />
     <%= f.password_field :password, autocomplete: "off" %>
+          <%= f.text_field :first_name %>
+          <%= f.text_field :last_name %>
   </div>
   </div>
   </div>
