make all the things remote

--- a/app/views/time_sheets/_form.html.erb
+++ b/app/views/time_sheets/_form.html.erb
@@ -15,7 +15,7 @@
     <div class="actions">
       <%= f.submit "Save", class: 'btn btn-default' %>
       <div  class= 'btn btn-default'>
-      <%= link_to_add_fields "Add field", f, :works%>
+      <%= link_to_add_fields "Add field", f, :works, 'works'%>
     </div>
     </div>
     <div class="table-responsive">
