--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,6 +2,163 @@
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
+    <div class="form-group">
+      <div class="row">
+        <div class="col-2">
+          <%= f.label :email, class: "control-label" %>
+        </div>
+        <div class=" col-7">
+          <%= f.text_field :email, class: "form-control" %>
+        </div>
+      </div>
+    </div>
+
+
+    <div class="form-group">
+      <div class="row">
+        <div class="col-2">
+          <%= f.label :username, class: "control-label" %>
+        </div>
+        <div class=" col-7">
+          <%= f.text_field :username, class: "form-control" %>
+        </div>
+      </div>
+    </div>
+
+    <div class="form-group">
+      <div class="row">
+        <div class="col-2">
+          <%= f.label :first_name, class: "control-label" %>
+        </div>
+        <div class=" col-7">
+          <%= f.text_field :first_name, class: "form-control" %>
+        </div>
+      </div>
+    </div>
+
+    <div class="form-group">
+      <div class="row">
+        <div class="col-2">
+          <%= f.label :last_name, class: "control-label" %>
+        </div>
+        <div class=" col-7">
+          <%= f.text_field :last_name, class: "form-control" %>
+        </div>
+      </div>
+    </div>
+
+
+    <div class="form-group">
+      <div class="row">
+        <div class="col-2">
+          <%= f.label :street_no, class: "control-label" %>
+        </div>
+        <div class=" col-7">
+          <%= f.text_field :street_no, class: "form-control" %>
+        </div>
+      </div>
+    </div>
+
+    <div class="form-group">
+      <div class="row">
+        <div class="col-2">
+          <%= f.label :street, class: "control-label" %>
+        </div>
+        <div class=" col-7">
+          <%= f.text_field :street, class: "form-control" %>
+        </div>
+      </div>
+    </div>
+
+    <div class="form-group">
+      <div class="row">
+        <div class="col-2">
+          <%= f.label :city, class: "control-label" %>
+        </div>
+        <div class=" col-7">
+          <%= f.text_field :city, class: "form-control" %>
+        </div>
+      </div>
+    </div>
+
+    <div class="form-group">
+      <div class="row">
+        <div class="col-2">
+          <%= f.label :state, class: "control-label" %>
+        </div>
+        <div class=" col-7">
+          <%= f.text_field :state, class: "form-control" %>
+        </div>
+      </div>
+    </div>
+
+    <div class="form-group">
+      <div class="row">
+        <div class="col-2">
+          <%= f.label :country, class: "control-label" %>
+        </div>
+        <div class=" col-7">
+          <%= f.text_field :country, class: "form-control" %>
+        </div>
+      </div>
+    </div>
+
+    <div class="form-group">
+      <div class="row">
+        <div class="col-2">
+          <%= f.label :post_code, class: "control-label" %>
+        </div>
+        <div class=" col-7">
+          <%= f.text_field :post_code, class: "form-control" %>
+        </div>
+      </div>
+    </div>
+
+    <div class="form-group">
+      <div class="row">
+        <div class="col-2">
+          <%= f.label :abn, class: "control-label" %>
+        </div>
+        <div class=" col-7">
+          <%= f.text_field :abn, class: "form-control" %>
+        </div>
+      </div>
+    </div>
+
+    <div class="form-group">
+      <div class="row">
+        <div class="col-2">
+          <%= f.label :rate, class: "control-label" %>
+        </div>
+        <div class=" col-7">
+          $ <%= @user.pay_rates.last.rate if @user.pay_rates.present? %> Per Hour
+
+
+          <div class="actions">
+            <div class='btn btn-default'>
+              <% if @user.pay_rates.present? %>
+                  <%= link_to_add_fields "Change Pay Rate", f, :pay_rates %>
+              <% else %>
+                  <%= link_to_add_fields "Add Pay Rate", f, :pay_rates %>
+              <% end %>
+            </div>
+          </div>
+          <div class="table-responsive">
+            <table>
+              <tr id="hours">
+              </tr>
+
+
+              </tr>
+            </table>
+          </div>
+        </div>
+      </div>
+
+
+      <div class="row">
+        <div class="form-group">
+          <div class="col-sm-offset-2 col-7 ">
 
   <div class="field">
     <%= f.label :email %><br />
