--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,16 +1,18 @@
 <p id="notice"><%= notice %></p>
+<div class="box">
 <div class='pull-right '  >
   <button  id="new-project" class="btn btn-primary">New User</button>
 </div>
 <h1>Users</h1>
 
-<div>
+
   <NewProject id="NewProject" class="new-project">
     <%= render 'form' %>
   </NewProject>
 
 </div>
 <%= will_paginate @users %>
+<br>
 <ul>
 <%= render @users %>
 </ul>
