--- a/app/views/customers/_form.html.erb
+++ b/app/views/customers/_form.html.erb
@@ -1,5 +1,5 @@
 
-<div class="container">
+<div class="container-fluid">
   <div class="form-horizontal">
     <%= form_for(@customer, remote: true) do |f| %>
         <% if @customer.errors.any? %>
