--- a/app/views/devise/registrations/_edit.html.erb
+++ b/app/views/devise/registrations/_edit.html.erb
@@ -1,9 +1,10 @@
 <h2>Edit <%= resource_name.to_s.humanize %></h2>
-
+<div class="box">
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= devise_error_messages! %>
     <%= render 'users/form', user: @user %>
-  <div class="field">
+  <div class="box">
+    <div>
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true %>
   </div>
@@ -31,13 +32,19 @@
     <%= f.password_field :current_password, autocomplete: "off" %>
   </div>
 
-  <div class="actions">
-    <%= f.submit "Update" %>
+  <div class="">
+    <%= f.submit "Update Password",class: 'btn btn-default pull-right' %>
   </div>
 <% end %>
+  <br>
+  <br>
+  </div></div>
+
+<div class="box">
 
 <h3>Cancel my account</h3>
 
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" },class: 'btn btn-default pull-right', method: :delete %>
+  <br><br>
+  </div>
 
-<%= link_to "Back", :back %>
