--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,9 +1,20 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<div class="box">
+<h2>Edit <%= @user.full_name%></h2>
+<%= link_to "Back", :back, class: 'btn btn-default '%>
+</div>
+
+
+<div class="box">
+
+  <%= render 'users/form', user: @user %>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+
+
+
+      </div><div class="box">
   <%= devise_error_messages! %>
-    <%= render 'users/form', user: @user %>
-  <div class="field">
+<div class="field">
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true %>
   </div>
@@ -31,13 +42,20 @@
     <%= f.password_field :current_password, autocomplete: "off" %>
   </div>
 
-  <div class="actions">
-    <%= f.submit "Update" %>
+  <div class="row">
+    <%= f.submit "Update",class:'btn btn-default pull-right action' %>
   </div>
 <% end %>
+  </div>
 
+
+<div class="box ">
+  <div class="row" >
 <h3>Cancel my account</h3>
 
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+  Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" },
+                          class:'btn btn-default pull-right ' , method: :delete %>
+</div>
+</div>
+  <br><br>
 
-<%= link_to "Back", :back %>
