--- a/app/views/invoices/new.html.erb
+++ b/app/views/invoices/new.html.erb
@@ -1,6 +1,16 @@
+<div class="box">
   <p id="notice"><%= notice %></p>
   <h1>New Invoice</h1>
 <div style="padding:10px">
+  <%= form_for Invoice.new do |f| %>
+
+
+      <%= f.hidden_field :project, value: @project.id %>
+      <%= f.submit "Save Invoice", class: 'btn btn-default' %>
+      <%= link_to 'Back', invoices_path, class: 'btn btn-default' %>
+
+  <% end %>
+  <br>
     <%= form_tag new_invoice_url, method: :get do %>
 
         <%= select_tag(:search, options_for_select(Project.select_attributes, params[:search]), :onchange => "this.form.submit();", class: 'btn btn-default ') %>
@@ -41,14 +51,8 @@
           <%= render 'shared/time_sheets_for_week', work: @work %>
         </div>
   <div class="btn-group">
-  <%= form_for Invoice.new do |f| %>
 
 
-      <%= f.hidden_field :project, value: @project.id %>
-      <%= f.submit "Save Invoice", class: 'btn btn-default' %>
-  <% end %>
-
-    <%= link_to 'Back', invoices_path, class: 'btn btn-default' %>
 
 </div>
   </div>
