--- a/app/views/time_sheets/edit.html.erb
+++ b/app/views/time_sheets/edit.html.erb
@@ -1,5 +1,11 @@
+<div class="box">
 <h1>  <%= @time_sheet.user.first_name %>&nbsp<%= @time_sheet.user.last_name %>   <%= @time_sheet.time_period.strftime("%d %A %B %Y") %></h1>
-<%= render 'form', time_sheet: @time_sheet %>
+</div>
+<div class="box btn-group" style="width: 100%">
+  <%= link_to 'Show', @time_sheet, class: 'btn btn-default' %>
+  <%= link_to 'Back', time_sheets_path, class: 'btn btn-default' %>
+</div>
+<div class="box">
+  <%= render 'form', time_sheet: @time_sheet %>
+</div>
 
-<%= link_to 'Show', @time_sheet %> |
-<%= link_to 'Back', time_sheets_path %>
