--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container-fluid">
   <div class="form-horizontal">
     <%= form_for(@user, remote: true) do |f| %>
         <% if @user.errors.any? %>
@@ -12,135 +12,119 @@
               </ul>
             </div>
         <% end %>
-        <div class="form-group">
-          <div class="row">
-            <div class="col-2">
-              <%= f.label :email, class: "control-label" %>
-            </div>
-            <div class=" col-7">
-              <%= f.text_field :email, class: "form-control" %>
-            </div>
-          </div>
-        </div>
-
 
         <div class="form-group">
-          <div class="row">
-            <div class="col-2">
-              <%= f.label :username, class: "control-label" %>
-            </div>
-            <div class=" col-7">
-              <%= f.text_field :username, class: "form-control" %>
-            </div>
-          </div>
-        </div>
 
-        <div class="form-group">
           <div class="row">
-            <div class="col-2">
+            <div class="col-sm-2">
               <%= f.label :first_name, class: "control-label" %>
             </div>
-            <div class=" col-7">
+            <div class=" col-sm-7">
               <%= f.text_field :first_name, class: "form-control" %>
             </div>
           </div>
-        </div>
+          </div>
 
         <div class="form-group">
+
           <div class="row">
-            <div class="col-2">
+            <div class="col-sm-2">
               <%= f.label :last_name, class: "control-label" %>
             </div>
-            <div class=" col-7">
+            <div class=" col-sm-7">
               <%= f.text_field :last_name, class: "form-control" %>
             </div>
           </div>
-        </div>
-
+          </div>
 
         <div class="form-group">
+
           <div class="row">
-            <div class="col-2">
+            <div class="col-sm-2">
               <%= f.label :street_no, class: "control-label" %>
             </div>
-            <div class=" col-7">
+            <div class=" col-sm-7">
               <%= f.text_field :street_no, class: "form-control" %>
             </div>
           </div>
-        </div>
+          </div>
 
         <div class="form-group">
+
           <div class="row">
-            <div class="col-2">
+            <div class="col-sm-2">
               <%= f.label :street, class: "control-label" %>
             </div>
-            <div class=" col-7">
+            <div class=" col-sm-7">
               <%= f.text_field :street, class: "form-control" %>
             </div>
           </div>
-        </div>
-
+          </div>
         <div class="form-group">
+
           <div class="row">
-            <div class="col-2">
+            <div class="col-sm-2">
               <%= f.label :city, class: "control-label" %>
             </div>
-            <div class=" col-7">
+            <div class=" col-sm-7">
               <%= f.text_field :city, class: "form-control" %>
             </div>
           </div>
-        </div>
+          </div>
 
         <div class="form-group">
-          <div class="row">
-            <div class="col-2">
+
+        <div class="row">
+            <div class="col-sm-2">
               <%= f.label :state, class: "control-label" %>
             </div>
-            <div class=" col-7">
+            <div class=" col-sm-7">
               <%= f.text_field :state, class: "form-control" %>
             </div>
           </div>
-        </div>
+          </div>
 
         <div class="form-group">
+
           <div class="row">
-            <div class="col-2">
+            <div class="col-sm-2">
               <%= f.label :country, class: "control-label" %>
             </div>
-            <div class=" col-7">
+            <div class=" col-sm-7">
               <%= f.text_field :country, class: "form-control" %>
             </div>
           </div>
-        </div>
+          </div>
 
         <div class="form-group">
-          <div class="row">
-            <div class="col-2">
+        <div class="row">
+            <div class="col-sm-2">
               <%= f.label :post_code, class: "control-label" %>
             </div>
-            <div class=" col-7">
+            <div class=" col-sm-7">
               <%= f.text_field :post_code, class: "form-control" %>
             </div>
           </div>
-        </div>
+          </div>
 
         <div class="form-group">
           <div class="row">
-            <div class="col-2">
+            <div class="col-sm-2">
               <%= f.label :abn, class: "control-label" %>
             </div>
-            <div class=" col-7">
+            <div class=" col-sm-7">
               <%= f.text_field :abn, class: "form-control" %>
             </div>
           </div>
-        </div>
+          </div>
 
         <div class="form-group">
           <div class="row">
-            <div class="col-2">
+            <div class="col-sm-2">
               <%= f.label :rate, class: "control-label" %>
             </div>
-            <div class=" col-7">
+            </div>
+            <div class=" col-sm-7">
               $ <%= @user.pay_rates.last.rate if @user.pay_rates.present? %> Per Hour
 
 
@@ -167,15 +151,13 @@
 
 
           <div class="row">
-            <div class="form-group">
-              <div class="col-sm-offset-2 col-7 ">
+
+
 
                 <%= f.submit class: "btn btn-default pull-right" %>
 
               </div>
-            </div>
-          </div>
-        </div>
+
     <% end %>
   </div>
 </div>
