--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,12 +1,12 @@
 <li class="shadow user-<%= user.id %>">
   <div class="row">
-         <div class="col-8">
-         <strong>
-           <%= user.full_name %>
-         </strong>
+         <div class="col-md-8">
+
+          <h5><%= user.full_name %></h5>
+           <%= link_to 'Open', user, class: "hidden" %>
 
        </div>
-        <%= link_to 'Open', user, class: "hidden" %>
+
   </div>
 </li>
 <br>
