--- a/app/views/users/_user_details.html.erb
+++ b/app/views/users/_user_details.html.erb
@@ -1,3 +1,4 @@
+<div class="box">
 <p>
   <strong>Email:</strong>
   <%= @user.email %>
@@ -66,3 +67,4 @@
       </tr>
   <% end %>
 </table>
+</div>
