--- a/app/views/users/edit.js.erb
+++ b/app/views/users/edit.js.erb
@@ -1,1 +1,1 @@
-$('#user_partial').html("<%= j render 'form', user: @user %>")
+$('#user_partial').html("<%= j render 'users/edit', user: @user %>")
