--- a/app/views/invoices/index.html.erb
+++ b/app/views/invoices/index.html.erb
@@ -1,17 +1,16 @@
 <p id="notice"><%= notice %></p>
-
+<div class="box">
 
 <div class='pull-right '>
   <%= link_to 'New Invoice', new_invoice_path, class: 'btn btn-primary' %>
 </div>
 <h1>Invoices</h1>
-
+</div>
 
 <%= will_paginate @invoices %>
 <div class="col-xs-5 col-md-5"><strong>Invoice No#</strong></div>
 <div class="col-xs-5 col-md-5" ><strong>Customer: </strong></div>
-<br>
-<br>
+
 <ul>
   <%= render @invoices %>
 </ul>
