--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,38 +21,37 @@
 <body>
 
 
-  <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+  <nav class="navbar navbar-default navbar-fixed-top" " role="navigation">
 
-    <div class="container-fluid">
+    <div class="container-fluid"style="background-color: #7C7C7C !important; color: white">
 
-      <div class="navbar-header" style="padding-left: 20px">
+      <div class="navbar-header" style="padding-left: 20px;color: white">
 
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="navbar-collapse">
           <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
+          <span class="icon-bar" ></span>
+          <span class="icon-bar" ></span>
+          <span class="icon-bar" ></span>
         </button>
         <a href="#" class="navbar-btn btn btn-success pull-left" id="menu-toggle" style="margin-right:  20px">Menu</a>
 
-        <a class="navbar-brand" href="/"> Time Sheet</a>
+        <a class="navbar-brand" style="color: white" href="/"> Time Sheet</a>
       </div>
       <div class="collapse navbar-collapse">
-        <p class="navbar-text pull-right">
+        <p class="navbar-text pull-right" style="color: white" >
           <% if user_signed_in? %>
               Logged in as <strong><%= current_user.email %></strong>.
-              <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> |
-              <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link' %> |
-              <%= link_to "Identities", user_identities_path(current_user), :class => 'navbar-link' %>
+              <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link', style:"color: white"%> |
+              <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link' , style:"color: white"%> |
+              <%= link_to "Identities", user_identities_path(current_user), :class => 'navbar-link' , style:"color: white"%>
           <% else %>
-              <%= link_to "Sign up", new_user_registration_path, :class => 'navbar-link' %> |
-              <%= link_to "Login", new_user_session_path, :class => 'navbar-link' %>|
+              <%= link_to "Sign up", new_user_registration_path, :class => 'navbar-link' , style:"color: white"%> |
+              <%= link_to "Login", new_user_session_path, :class => 'navbar-link' , style:"color: white"%>|
           <% end %>
           </div>
     </div>
   </nav>
-
-<div id="menuhides" class="menu-hide-mobile col-md-2 col-xs-0 " style="position: fixed; z-index: 2;">
+<div id="menuhides" class="box menu-hide-mobile col-md-2 col-xs-0 sbar" style="height:100%;position: fixed; z-index: 2;">
       <ul class="menu" >
           <li><%= link_to 'My Timesheets', time_sheets_path(current_user) %></li>
           <li><%= link_to 'My Invoices', invoices_path(current_user) %></li>
@@ -63,6 +62,7 @@
       </div>
 
     <div id="bodysize" class="container-fluid  col-md-10 col-sm-12 pull-right body-container" style="z-index: 1;">
+      <br>
       <%= yield %>
 
     </div>
