--- a/app/views/users/_user_income.html.erb
+++ b/app/views/users/_user_income.html.erb
@@ -1,28 +1,49 @@
-
 <div class="box">
-<%= form_tag user_user_income_path(@user), method: :get,format: :js, remote: true do %>
-    <%= select_tag(:project_search, options_for_select(Project.select_attributes,params[:project_search]) ,:include_blank => true, :onchange => "click_search()", class: "btn btn-default")  %>
-    <%= submit_tag '',id: :search_project, remote: true , style:"display: none;" %>
-<%end %>
-  <%= form_tag user_user_income_path(@user), method: :get do %>
+  <div class="row">
+    <div class="col-md-2">
+      <div class="dropdown show">
+        <a class="btn btn-default dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Select Projects
+        </a>
+        <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
 
-<button formaction=" <%= user_user_income_path(@user, format: 'pdf') %>" ,type="submit" , class="btn btn-default">Pdf</button>
-    <button formaction=" <%=user_user_income_path(@user, format: 'csv') %>" ,type="submit" , class="btn btn-default">Csv</button>
-      <button formaction=" <%= user_user_income_path(@user, format: 'xlsx') %>" ,type="submit" , class="btn btn-default">Excel</button>
-  <% end %>
 
-<h1>Total Income <%= @total_pay[:total] %>
-  Superannuation <%= @total_pay[:superannuation] %>
-  Holidays <%= @total_pay[:holidays] %></h1>
+          <%= form_tag user_user_income_path(@user), method: :get, format: :js, remote: true do %>
+              <%= select_tag(:project_search, options_for_select(Project.select_attributes, params[:project_search]),
+                             size: Project.select_attributes.length+1,
+                             multiple: true,
+                             :include_blank => true,
+                             :onchange => "click_search()",
+                             class: 'overflow-hidden',
+                  ) %>
+              <%= submit_tag '', id: :search_project_button, remote: true, style: "display: none;" %>
+          <% end %>
+        </div>
+      </div>
 
-<div id="user_income">
-  <%= render 'users/all_user_work' %>
-</div>
+    </div>
+    <div class="col-md-4">
+      <%= form_tag user_user_income_path(@user), method: :get do %>
+          <%= text_field_tag :project_search, params[:project_search], id: 'project_search_input' %>
+          <button formaction=" <%= user_user_income_path(@user, format: 'pdf') %>" ,type="submit" , class="btn btn-default">Pdf</button>
+          <button formaction=" <%= user_user_income_path(@user, format: 'csv') %>" ,type="submit" , class="btn btn-default">Csv</button>
+          <button formaction=" <%= user_user_income_path(@user, format: 'xlsx') %>" ,type="submit" , class="btn btn-default">Excel</button>
+      <% end %>
+    </div>
+  </div>
+  <h1>Total Income <%= @total_pay[:total] %>
+    Superannuation <%= @total_pay[:superannuation] %>
+    Holidays <%= @total_pay[:holidays] %></h1>
+
+  <div id="user_income">
+    <%= render 'users/all_user_work' %>
+  </div>
 
 </div>
 <script type="text/javascript">
-    function click_search()
-    {
-        $('#search_project').click();
+    function click_search() {
+        $('#search_project_button').click();
+        var text = $('#project_search').val();
+        $('#project_search_input').val(text);
     }
 </script>
